Fix wrap in config view (#23)

--- a/static/styles.css
+++ b/static/styles.css
@@ -80,7 +80,6 @@ ul {
 }
 
 .configsection p {
-  width: fit-content;
   word-wrap: normal;
 }
 
